--- a/vagrants/Vagrantfile
+++ b/vagrants/Vagrantfile
@@ -11,6 +11,7 @@ base_network = "172.16.31"
      vb.customize ["modifyvm", :id, "--name", "win7ie8packer"]
      vb.customize ["modifyvm", :id, "--vrde", "on"]
      vb.customize ["modifyvm", :id, "--vrdeport", "3389"]
+     vb.customize ["modifyvm", :id, "--vrdehost", "0.0.0.0"]
      # Customize the amount of memory on the VM:
      vb.memory = "2048"
    end
