--- a/vagrants/Vagrantfile
+++ b/vagrants/Vagrantfile
@@ -2,13 +2,13 @@ Vagrant.configure(2) do |config|
 
 base_network = "172.16.31"
   
-  config.vm.box = "galeksandrp/ie8-win7-packer"
+  config.vm.box = "mrh1997/vanilla-win7-32bit"
   config.vm.network :private_network, ip: "#{base_network}.10"
   config.vm.network "forwarded_port", guest: 22, host: 2222, host_ip: "0.0.0.0"
   config.vm.provider "virtualbox" do |vb|    
      # Display the VirtualBox GUI when booting the machine
      #vb.gui = true
-     vb.customize ["modifyvm", :id, "--name", "win7ie8packer"]
+     vb.customize ["modifyvm", :id, "--name", "win7ie8"]
      vb.customize ["modifyvm", :id, "--vrde", "on"]
      vb.customize ["modifyvm", :id, "--vrdeport", "3389"]
      vb.customize ["modifyvm", :id, "--vrdehost", "0.0.0.0"]
