--- a/vagrants/Vagrantfile
+++ b/vagrants/Vagrantfile
@@ -5,8 +5,8 @@ base_network = "172.16.31"
   config.vm.box = "mrh1997/vanilla-win7-32bit"
   config.vm.network :private_network, ip: "#{base_network}.10"
   config.vm.network "forwarded_port", guest: 22, host: 2222, host_ip: "0.0.0.0"
-  config.vm.provider "virtualbox" do |vb|    
   config.vm.boot_timeout = 150
+  config.vm.provider "virtualbox" do |vb|    
      # Display the VirtualBox GUI when booting the machine
      #vb.gui = true
      vb.customize ["modifyvm", :id, "--name", "win7ie8"]
@@ -16,6 +16,7 @@ base_network = "172.16.31"
      # Customize the amount of memory on the VM:
      vb.memory = "2048"
    end
+  config.vm.provision :shell, path: "chocospawn.cmd"
 end  
   # win7ie
   #config.vm.define :win7ie do |win7ie|
