--- a/vagrants/Vagrantfile
+++ b/vagrants/Vagrantfile
@@ -6,7 +6,8 @@ base_network = "172.16.31"
   config.vm.network :private_network, ip: "#{base_network}.10"
   config.vm.network "forwarded_port", guest: 22, host: 2222, host_ip: "0.0.0.0"
   config.vm.boot_timeout = 150
-  config.vm.provision :shell, path: "chocospawn.cmd"  
+  config.vm.provision :shell, path: "chocospawn.cmd"
+  config.vm.provision :shell, inline: "cinst -y notepadplusplus nmap"  
   config.vm.provider "virtualbox" do |vb|    
      # Display the VirtualBox GUI when booting the machine
      #vb.gui = true
@@ -18,7 +19,6 @@ base_network = "172.16.31"
      # Customize the amount of memory on the VM:
      vb.memory = "2048"
    end
-
 end  
   # win7ie
   #config.vm.define :win7ie do |win7ie|
