--- a/vagrants/Vagrantfile
+++ b/vagrants/Vagrantfile
@@ -6,8 +6,10 @@ base_network = "172.16.31"
   config.vm.network :private_network, ip: "#{base_network}.10"
   config.vm.network "forwarded_port", guest: 22, host: 2222, host_ip: "0.0.0.0"
   config.vm.boot_timeout = 150
-  config.vm.provision :shell, path: "chocospawn.cmd"
+  #config.vm.provision :shell, path: "chocospawn.cmd"
   config.vm.provision :shell, inline: "slmgr /ato"  
+  config.vm.provision :shell, inline: 'powershell -NoProfile -ExecutionPolicy unrestricted -Command "iex ((new-object net.webclient).DownloadString(\'https://chocolatey.org/install.ps1\'))"'
+  config.vm.provision :shell, inline: 'choco install --force -y wget notepadplusplus nmap'
   config.vm.provider "virtualbox" do |vb|    
      # Display the VirtualBox GUI when booting the machine
      #vb.gui = true
