--- a/microsoft/provisioning/ActiveDirectory/nxlog/nxlog.conf
+++ b/microsoft/provisioning/ActiveDirectory/nxlog/nxlog.conf
@@ -44,15 +44,21 @@ SpoolDir  %ROOT%\data
     </Schedule>
 </Extension>
 
-<Input in>
-    Module  im_msvistalog
+<Input mseventlog>
+ Module im_msvistalog
     <QueryXML>
         <QueryList>
-            <Query Id="0">
-                <Select Path="Microsoft-Windows-Sysmon/Operational">*</Select>
+            <Query Id="0" Path="Application">
+                <Select Path="ForwardedEvents">*</Select>
             </Query>
         </QueryList>
     </QueryXML>
+	<Exec>
+		if ($rulename == "T1060,Runkey" or
+		$Image == "C:\\Windows\\SysWOW64\\MSDCSC\\wmisrv32.exe" or
+		$raw_event =~ /WindowsAzure/)
+            	drop();
+	</Exec>
 </Input>
 
 <Output SPLUNK>
@@ -71,5 +77,5 @@ SpoolDir  %ROOT%\data
 </Output>
 
 <Route 1>
-  Path in => SPLUNK
+  Path mseventlog => SPLUNK
 </Route>
