--- a/microsoft/provisioning/ActiveDirectory/nxlog/nxlog.conf
+++ b/microsoft/provisioning/ActiveDirectory/nxlog/nxlog.conf
@@ -56,7 +56,8 @@ SpoolDir  %ROOT%\data
 	<Exec>
 		if ($rulename == "T1060,Runkey" or
 		$Image == "C:\\Windows\\SysWOW64\\MSDCSC\\wmisrv32.exe" or
-		$raw_event =~ /WindowsAzure/)
+		$raw_event =~ /WindowsAzure/ or
+		$raw_event =~ /azLoader/ )
             	drop();
 	</Exec>
 </Input>
